manifests/watchtower/registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: infra
  labels:
    app.kubernetes.io/name: registry
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: registry
  ports:
    - name: http
      port: 5000
      targetPort: http
